--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "cakephp/cakephp": "~3"
+        "cakephp/cakephp": ">=3.6.0 <4.0.0"
     },
     "support": {
         "source": "https://github.com/simtecsystem/cakephp-sluggable"
